master - experemental variable